--- a/src/app/routes/representante/representante-show/representante-show.component.html
+++ b/src/app/routes/representante/representante-show/representante-show.component.html
@@ -18,13 +18,17 @@
                       <span matListItemTitle>{{representante.apellidos}}</span>
                       <span matListItemLine>Apellidos</span>
                     </mat-list-item>
+                    <mat-list-item>
+                     <span matListItemTitle>{{representante.fecha_nacimiento}}</span>
+                     <span matListItemLine>Fecha Nacimiento</span>
+                    </mat-list-item>
               </mat-list>
             </div>
             <div class="col-sm-6">
                  <mat-list>
                     <mat-list-item>
-                      <span matListItemTitle>{{representante.lugar_residencia}}</span>
-                      <span matListItemLine>Lugar Residencia</span>
+                      <span matListItemTitle>{{representante.direccion}}</span>
+                      <span matListItemLine>Direccion</span>
                     </mat-list-item>
                     <mat-list-item>
                       <span matListItemTitle>{{representante.telefono}}</span>
