--- a/src/app/routes/representante/representante-form/representante-form.component.html
+++ b/src/app/routes/representante/representante-form/representante-form.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-card-content>
         <form class="form-field-full" [formGroup]="representanteForm" (ngSubmit)="submit()">
-            
+
             <!--<div class="row">-->
                 <!--columna 1-->
                 <!--<div class="col-sm-6">-->
@@ -16,37 +16,44 @@
                     <mat-form-field>
                         <mat-label>Apellidos</mat-label>
                         <input matInput formControlName="apellidos">
-                     </mat-form-field>
+                    </mat-form-field>
+
+                    <mat-form-field>
+                      <mat-label>Fecha de Nacimiento</mat-label>
+                      <input matInput [matDatepicker]="picker" formControlName="fecha_nacimiento">
+                      <mat-hint>YYYY-MM-DD</mat-hint>
+                      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                      <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
                 <!--</div>-->
-                
+
                 <!--columna 2-->
                 <!--<div class="col-sm-6">-->
-                    
                     <mat-form-field>
-                        <mat-label>Lugar de Residencia</mat-label>
-                        <input matInput formControlName="lugar_residencia">
-                     </mat-form-field>
-                    
-                    <mat-form-field>
-                        <mat-label>Teléfono</mat-label>
-                        <input matInput formControlName="telefono">
-                        <mat-icon matSuffix>phone</mat-icon>
+                      <mat-label>Teléfono</mat-label>
+                      <input matInput formControlName="telefono">
+                      <mat-icon matSuffix>phone</mat-icon>
                     </mat-form-field>
-                    
+
+                    <mat-form-field>
+                        <mat-label>Direccion</mat-label>
+                      <textarea matInput placeholder="Escriba la direccion o residencia" formControlName="direccion"></textarea>
+                     </mat-form-field>
+
                     <mat-form-field>
                         <mat-label>Correo Electronicol</mat-label>
                         <input matInput
                                autocomplete="not-complete"
                                placeholder="pat@example.com"
                                formControlName="correo">
-                        </mat-form-field>
+                    </mat-form-field>
                 <!--</div>-->
            <!-- </div>-->
             <div class="d-flex justify-content-end">
                 <button mat-raised-button color="primary" [disabled]="!representanteForm.valid">Guardar</button>
             </div>
         </form>
-    </mat-card-content>    
+    </mat-card-content>
 </mat-card>
 
 
