--- a/src/app/routes/matricula/matricula-doc/matricula-doc.component.html
+++ b/src/app/routes/matricula/matricula-doc/matricula-doc.component.html
@@ -30,5 +30,9 @@
       <mat-icon>picture_as_pdf</mat-icon>
       Certificado de Matricula y Asistencia
     </button>
+    <button mat-fab extended (click)="printCertificadoPreinscripcion()">
+      <mat-icon>picture_as_pdf</mat-icon>
+      Certificado de Preinscripción
+    </button>
   </mat-card-content>
 </mat-card>
