--- a/src/app/routes/matricula/matricula-list/matricula-list.component.html
+++ b/src/app/routes/matricula/matricula-list/matricula-list.component.html
@@ -1,117 +1,134 @@
-<page-header title="Matriculas" subtitle="Listados de Matriculas" class="bg-green-600" ></page-header>
+<page-header title="Matriculas" subtitle="Listados de Matriculas" class="bg-green-600"></page-header>
 <mat-card>
-    <mat-card-actions align="end">
-        <a mat-flat-button routerLink="/matricula/dashboard/new" class="m-2" >Nueva Matricula</a>
-        <button mat-stroked-button color="primary">Imprimir Lista</button>
-    </mat-card-actions>
+  <mat-card-actions align="end">
+    <a mat-flat-button routerLink="/matricula/dashboard/new" class="m-2">Nueva Matricula</a>
+    <button mat-stroked-button color="primary" (click)="pdfMatriculaList()">Imprimir Lista</button>
+  </mat-card-actions>
 
-     <mat-divider></mat-divider>
+  <mat-divider></mat-divider>
 
-    <mat-card-content>
-        <form class="form-field-full" [formGroup]="matriculaFilterForm" (ngSubmit)="submit()">
-            <p>Filter</p>
-            <div class="row form-field-full">
-                <div class="col-sm-6">
-                    <mat-form-field>
-                        <mat-label>Periodo Lectivo</mat-label>
-                        <mat-select formControlName="periodo_lectivo">
-                            <mat-option>--</mat-option>
-                            @for (periodoLectivo of periodoLectivoList$ | async; track periodoLectivo) {
-                              <mat-option [value]="periodoLectivo">{{periodoLectivo.descripcion}}</mat-option>
-                            }
-                        </mat-select>
-                    </mat-form-field>
-                </div>
-                <div class="col-sm-6">
-                    <mat-form-field>
-                        <mat-label>Grado o Curso</mat-label>
-                        <mat-select formControlName="grado_escolar">
-                            <mat-option>--</mat-option>
-                            @for (gradoEscolar of gradoEscolarList$ | async; track gradoEscolar) {
-                              <mat-option [value]="gradoEscolar">{{gradoEscolar.descripcion}}</mat-option>
-                            }
-                        </mat-select>
-                    </mat-form-field>
-                </div>
-                <div class="col-sm-10">
-                    <mat-form-field>
-                        <mat-label>Search</mat-label>
-                        <input matInput formControlName="search_term">
-                  </mat-form-field>
-                </div>
-                <div class="col-sm-2">
-                    <button mat-fab  class="full-button">
-                        <mat-icon>search</mat-icon>
-                    </button>
-                </div>
-            </div>
-        </form>
-    </mat-card-content>
+  <mat-card-content>
+    <form class="form-field-full" [formGroup]="matriculaFilterForm" (ngSubmit)="submit()">
+      <p>Filtros para busqueda</p>
+      <div class="row form-field-full">
+        <div class="col-sm-4">
+          <mat-form-field>
+            <mat-label>Periodo Lectivo</mat-label>
+            <mat-select formControlName="periodo_lectivo">
+              <mat-option>--</mat-option>
+              @for (periodoLectivo of periodoLectivoList$ | async; track periodoLectivo) {
+                <mat-option [value]="periodoLectivo">{{periodoLectivo.descripcion}}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-sm-4">
+          <mat-form-field>
+            <mat-label>Grado o Curso</mat-label>
+            <mat-select formControlName="grado_escolar">
+              <mat-option>--</mat-option>
+              @for (gradoEscolar of gradoEscolarList$ | async; track gradoEscolar) {
+                <mat-option [value]="gradoEscolar">{{gradoEscolar.descripcion}}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-sm-4">
+          <mat-form-field>
+            <mat-label>Paralelo</mat-label>
+            <mat-select formControlName="paralelo">
+              <mat-option>--</mat-option>
+              @for (paralelo of paraleloList$ | async; track paralelo) {
+                <mat-option [value]="paralelo">{{paralelo.descripcion}}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-sm-4">
+          <mat-form-field>
+            <mat-label>Estado</mat-label>
+            <mat-select formControlName="estado">
+              <mat-option>--</mat-option>
+              @for (estado of estadoList; track estado) {
+                <mat-option [value]="estado">{{estado}}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-sm-6">
+          <mat-form-field>
+            <mat-label>Search</mat-label>
+            <input matInput formControlName="search_term">
+          </mat-form-field>
+        </div>
+        <div class="col-sm-2">
+          <button mat-fab class="full-button">
+            <mat-icon>search</mat-icon>
+          </button>
+        </div>
+      </div>
+    </form>
+  </mat-card-content>
 </mat-card>
+
 <div class="mat-elevation-z8">
-<!--presentacion de datos, en una tabla-->
-    <table mat-table [dataSource]="dataSource">
+  <table mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="periodo_lectivo">
+      <th mat-header-cell *matHeaderCellDef>Año Lectivo</th>
+      <td mat-cell *matCellDef="let matricula">{{matricula.periodo_lectivo.descripcion}}</td>
+    </ng-container>
 
-      <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
+    <ng-container matColumnDef="identificacion">
+      <th mat-header-cell *matHeaderCellDef>Identificacion</th>
+      <td mat-cell *matCellDef="let matricula">{{matricula.estudiante.identificacion}}</td>
+    </ng-container>
 
-      <!-- Position Column -->
-      <ng-container matColumnDef="periodo_lectivo">
-        <th mat-header-cell *matHeaderCellDef> Año Lectivo </th>
-        <td mat-cell *matCellDef="let matricula"> {{matricula.periodo_lectivo.descripcion}} </td>
-      </ng-container>
+    <ng-container matColumnDef="nombres">
+      <th mat-header-cell *matHeaderCellDef>Nombres</th>
+      <td mat-cell *matCellDef="let matricula">{{matricula.estudiante.nombres}}</td>
+    </ng-container>
 
-        <!-- Symbol Column -->
-      <ng-container matColumnDef="identificacion">
-        <th mat-header-cell *matHeaderCellDef> Identificacion </th>
-        <td mat-cell *matCellDef="let matricula"> {{matricula.estudiante.identificacion}} </td>
-      </ng-container>
+    <ng-container matColumnDef="apellidos">
+      <th mat-header-cell *matHeaderCellDef>Apellidos</th>
+      <td mat-cell *matCellDef="let matricula">{{matricula.estudiante.apellidos}}</td>
+    </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="nombres">
-        <th mat-header-cell *matHeaderCellDef> Nombres </th>
-        <td mat-cell *matCellDef="let matricula"> {{matricula.estudiante.nombres}} </td>
-      </ng-container>
+    <ng-container matColumnDef="grado_escolar">
+      <th mat-header-cell *matHeaderCellDef>Grado Escolar</th>
+      <td mat-cell *matCellDef="let matricula">{{matricula.grado_escolar.descripcion}}</td>
+    </ng-container>
 
-      <!-- Weight Column -->
-      <ng-container matColumnDef="apellidos">
-        <th mat-header-cell *matHeaderCellDef> Apellidos </th>
-        <td mat-cell *matCellDef="let matricula"> {{matricula.estudiante.apellidos}} </td>
-      </ng-container>
+    <ng-container matColumnDef="estado">
+      <th mat-header-cell *matHeaderCellDef>Estado Matrícula</th>
+      <td mat-cell *matCellDef="let matricula">{{matricula.estado}}</td>
+    </ng-container>
 
-      <!-- Weight Column -->
-      <ng-container matColumnDef="grado_escolar">
-        <th mat-header-cell *matHeaderCellDef> Grado Escolar </th>
-        <td mat-cell *matCellDef="let matricula"> {{matricula.grado_escolar.descripcion}} </td>
-      </ng-container>
+    <ng-container matColumnDef="inscrito_en_sistema_publico">
+      <th mat-header-cell *matHeaderCellDef>Inscrito en el CAS?</th>
+      <td mat-cell *matCellDef="let matricula">
+        @if (matricula.inscrito_en_sistema_publico) {
+          <mat-icon matChipAvatar>check_circle</mat-icon>
+        } @else {
+          <mat-icon matChipAvatar>cancel</mat-icon>
+        }
+      </td>
+    </ng-container>
 
-      <!-- Weight Column -->
-      <ng-container matColumnDef="esta_activa">
-        <th mat-header-cell *matHeaderCellDef> Está Activa? </th>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row
+      (click)="selectMatricula(row)"
+      *matRowDef="let row; columns: displayedColumns;">
+    </tr>
+  </table>
 
-        <td mat-cell *matCellDef="let matricula">
-          @if (matricula.esta_activa){
-            <mat-icon matChipAvatar>check_circle</mat-icon>
-          } @else {
-            <mat-icon matChipAvatar>cancel</mat-icon>
-          }
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row
-          (click)="selectMatricula(row)"
-          *matRowDef="let row; columns: displayedColumns;">
-      </tr>
-    </table>
-    <mat-paginator
-            #paginator
-            (page)="handlePageEvent($event)"
-            [length]="collectionLength"
-            [pageSize]="pageSize"
-            [pageSizeOptions]="pageSizeOptions"
-            [pageIndex]="pageIndex"
-            showFirstLastButtons
-            aria-label="Select page">
-    </mat-paginator>
+  <mat-paginator
+    #paginator
+    (page)="handlePageEvent($event)"
+    [length]="collectionLength"
+    [pageSize]="pageSize"
+    [pageSizeOptions]="pageSizeOptions"
+    [pageIndex]="pageIndex"
+    showFirstLastButtons
+    aria-label="Select page">
+  </mat-paginator>
 </div>
