--- a/src/app/routes/representante/representante-form/representante-form.component.html
+++ b/src/app/routes/representante/representante-form/representante-form.component.html
@@ -9,14 +9,25 @@
                         <mat-label>Identificacion</mat-label>
                         <input matInput formControlName="identificacion">
                      </mat-form-field>
+
+                      <mat-form-field>
+                        <mat-label>Apellidos</mat-label>
+                        <input matInput formControlName="apellidos">
+                      </mat-form-field>
+
                     <mat-form-field>
                         <mat-label>Nombres</mat-label>
                         <input matInput formControlName="nombres">
                      </mat-form-field>
-                    <mat-form-field>
-                        <mat-label>Apellidos</mat-label>
-                        <input matInput formControlName="apellidos">
-                    </mat-form-field>
+
+                      <mat-form-field>
+                        <mat-label>Sexo</mat-label>
+                        <mat-select formControlName="sexo" required>
+                          @for (sexo of sexos; track sexo) {
+                            <mat-option [value]="sexo">{{sexo}}</mat-option>
+                          }
+                        </mat-select>
+                      </mat-form-field>
 
                     <mat-form-field>
                       <mat-label>Fecha de Nacimiento</mat-label>
