--- a/src/app/routes/matricula/matricula-list/matricula-list.component.html
+++ b/src/app/routes/matricula/matricula-list/matricula-list.component.html
@@ -70,57 +70,59 @@
     </form>
   </mat-card-content>
 </mat-card>
-
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="periodo_lectivo">
-      <th mat-header-cell *matHeaderCellDef>Año Lectivo</th>
-      <td mat-cell *matCellDef="let matricula">{{matricula.periodo_lectivo.descripcion}}</td>
-    </ng-container>
+  <div class="table-wrapper">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="periodo_lectivo">
+        <th mat-header-cell *matHeaderCellDef>Año Lectivo</th>
+        <td mat-cell *matCellDef="let matricula">{{matricula.periodo_lectivo.descripcion}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="identificacion">
-      <th mat-header-cell *matHeaderCellDef>Identificacion</th>
-      <td mat-cell *matCellDef="let matricula">{{matricula.estudiante.identificacion}}</td>
-    </ng-container>
+      <ng-container matColumnDef="identificacion">
+        <th mat-header-cell *matHeaderCellDef>Identificacion</th>
+        <td mat-cell *matCellDef="let matricula">{{matricula.estudiante.identificacion}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="apellidos">
-      <th mat-header-cell *matHeaderCellDef>Apellidos</th>
-      <td mat-cell *matCellDef="let matricula">{{matricula.estudiante.apellidos}}</td>
-    </ng-container>
+      <ng-container matColumnDef="apellidos">
+        <th mat-header-cell *matHeaderCellDef>Apellidos</th>
+        <td mat-cell *matCellDef="let matricula">{{matricula.estudiante.apellidos}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="nombres">
-      <th mat-header-cell *matHeaderCellDef>Nombres</th>
-      <td mat-cell *matCellDef="let matricula">{{matricula.estudiante.nombres}}</td>
-    </ng-container>
+      <ng-container matColumnDef="nombres">
+        <th mat-header-cell *matHeaderCellDef>Nombres</th>
+        <td mat-cell *matCellDef="let matricula">{{matricula.estudiante.nombres}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="grado_escolar">
-      <th mat-header-cell *matHeaderCellDef>Grado Escolar</th>
-      <td mat-cell *matCellDef="let matricula">{{matricula.grado_escolar.descripcion}}</td>
-    </ng-container>
+      <ng-container matColumnDef="grado_escolar">
+        <th mat-header-cell *matHeaderCellDef>Grado Escolar</th>
+        <td mat-cell *matCellDef="let matricula">{{matricula.grado_escolar.descripcion}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="estado">
-      <th mat-header-cell *matHeaderCellDef>Estado Matrícula</th>
-      <td mat-cell *matCellDef="let matricula">{{matricula.estado_matricula.descripcion}}</td>
-    </ng-container>
+      <ng-container matColumnDef="estado">
+        <th mat-header-cell *matHeaderCellDef>Estado Matrícula</th>
+        <td mat-cell *matCellDef="let matricula">{{matricula.estado_matricula.descripcion}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="inscrito_sistema_publico">
-      <th mat-header-cell *matHeaderCellDef>Inscrito en el CAS?</th>
-      <td mat-cell *matCellDef="let matricula">
-        @if (matricula.inscrito_sistema_publico) {
-          <mat-icon matChipAvatar>check_circle</mat-icon>
-        } @else {
-          <mat-icon matChipAvatar>cancel</mat-icon>
-        }
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="inscrito_sistema_publico">
+        <th mat-header-cell *matHeaderCellDef>Inscrito en el CAS?</th>
+        <td mat-cell *matCellDef="let matricula">
+          @if (matricula.inscrito_sistema_publico) {
+            <mat-icon matChipAvatar>check_circle</mat-icon>
+          } @else {
+            <mat-icon matChipAvatar>cancel</mat-icon>
+          }
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row
-      (click)="selectMatricula(row)"
-      *matRowDef="let row; columns: displayedColumns;">
-    </tr>
-  </table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row
+        (click)="selectMatricula(row)"
+        *matRowDef="let row; columns: displayedColumns;">
+      </tr>
+    </table>
 
+
+  </div>
   <mat-paginator
     #paginator
     (page)="handlePageEvent($event)"
