--- a/src/app/routes/matricula/matricula-dashboard/matricula-dashboard.component.html
+++ b/src/app/routes/matricula/matricula-dashboard/matricula-dashboard.component.html
@@ -8,7 +8,7 @@
   <mat-card>
     <mat-card-content>
       <mat-card-title>
-        Estudiante: {{matricula.estudiante.identificacion}}  / {{matricula.estudiante.nombres}} {{matricula.estudiante.apellidos}}
+        Estudiante: {{matricula.estudiante.identificacion}}  / {{matricula.estudiante.apellidos}} {{matricula.estudiante.nombres}}
       </mat-card-title>
     </mat-card-content>
   </mat-card>
