--- a/src/app/routes/matricula/matricula-doc/matricula-doc.component.html
+++ b/src/app/routes/matricula/matricula-doc/matricula-doc.component.html
@@ -14,6 +14,7 @@
       <mat-icon>picture_as_pdf</mat-icon>
       Acta de Compromiso
     </button>
+    <p>Nota: Para imprimir la Carta de Autorización y Acta de compromiso,  y legalizar, en "Datos de Matricula" debe constar como legalizada</p>
   </mat-card-content>
 </mat-card>
 
