--- a/src/app/routes/representante/representante-show/representante-show.component.html
+++ b/src/app/routes/representante/representante-show/representante-show.component.html
@@ -27,7 +27,7 @@
             <div class="col-sm-6">
                  <mat-list>
                    <mat-list-item>
-                     <span matListItemTitle>{{representante.pais_nacionalidad.nacionalidad}}</span>
+                     <span matListItemTitle>{{representante.pais_nacionalidad?.nacionalidad}}</span>
                      <span matListItemLine>Nacionalidad</span>
                    </mat-list-item>
                     <mat-list-item>
