--- a/src/app/routes/estudiante-representante/estudiante-representante-form/estudiante-representante-form.component.html
+++ b/src/app/routes/estudiante-representante/estudiante-representante-form/estudiante-representante-form.component.html
@@ -14,7 +14,7 @@
                                  [matAutocomplete]="auto">
                             <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
                                 @for (representante of filteredRepresentantes | async; track representante) {
-                                  <mat-option [value]="representante">{{representante.identificacion}} {{representante.nombres}} {{representante.apellidos}}</mat-option>
+                                  <mat-option [value]="representante">{{representante.identificacion}} {{representante.apellidos}} {{representante.nombres}}</mat-option>
                                 }
                             </mat-autocomplete>
                             @if(estudianteRepresentanteForm.get('representante')?.value?.id && !isInputRepresentanteDisabled){
