--- a/src/app/routes/estudiante/estudiante-form/estudiante-form.component.html
+++ b/src/app/routes/estudiante/estudiante-form/estudiante-form.component.html
@@ -51,7 +51,7 @@
                              [matAutocomplete]="auto">
                       <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
                         @for (paisNacionalidad of filteredPaisNacionalidades | async; track paisNacionalidad) {
-                          <mat-option [value]="paisNacionalidad">{{paisNacionalidad.nombre_comun}} {{paisNacionalidad.nacionalidad}}</mat-option>
+                          <mat-option [value]="paisNacionalidad">{{paisNacionalidad.nombre_comun}} / {{paisNacionalidad.nacionalidad}}</mat-option>
                         }
                       </mat-autocomplete>
                       <button matSuffix mat-icon-button aria-label="Clear" (click)="clearSelectPaisNacionalidad()">
