--- a/src/app/routes/matricula/matricula-form/matricula-form.component.html
+++ b/src/app/routes/matricula/matricula-form/matricula-form.component.html
@@ -91,7 +91,7 @@
             <div class="col-sm-6">
               Matricula Legalizada?:
               <mat-slide-toggle formControlName="legalizada">
-                Marque esta casilla si la matricula ha sido legalizada (cumple con todos los requisitos).
+                Marque esta casilla si la matricula va a legalizar en esete momento o ha sido legalizada (cumple con todos los requisitos).
               </mat-slide-toggle>
             </div>
           </div>
