se agrega estado_civil y obser a representante

--- a/src/app/routes/estudiante/estudiante-form/estudiante-form.component.html
+++ b/src/app/routes/estudiante/estudiante-form/estudiante-form.component.html
@@ -86,6 +86,12 @@
                                placeholder="pat@example.com"
                                formControlName="correo">
                     </mat-form-field>
+
+                    <mat-form-field>
+                      <mat-label>Observación</mat-label>
+                      <textarea matInput placeholder="Escriba cualquier observación, Ej. Falta doc" formControlName="observacion"></textarea>
+                    </mat-form-field>
+
                     <mat-slide-toggle formControlName="tiene_discapacidad">Presenta alguna Discapacidad</mat-slide-toggle>
                 <!--</div>-->
             </div>
