--- a/src/app/routes/estudiante/estudiante-show/estudiante-show.component.html
+++ b/src/app/routes/estudiante/estudiante-show/estudiante-show.component.html
@@ -26,6 +26,10 @@
                    <span matListItemTitle>{{estudiante.sexo}}</span>
                    <span matListItemLine>Sexo</span>
                  </mat-list-item>
+                 <mat-list-item>
+                   <span matListItemTitle>{{estudiante.observacion}}</span>
+                   <span matListItemLine>Observación</span>
+                 </mat-list-item>
               </mat-list>
             </div>
             <div class="col-sm-6">
